--- a/tox.ini
+++ b/tox.ini
@@ -24,9 +24,9 @@ deps =
     hypothesis==6.21.6
     joblib==1.1.0
     numpy>=1.21.6
-    open-aea-ledger-cosmos==1.41.0
-    open-aea-test-autonomy==0.13.1
-    open-autonomy[all]==0.13.1
+    open-aea-ledger-cosmos==1.41.0.post1
+    open-aea-test-autonomy==0.13.2
+    open-autonomy[all]==0.13.2
     pandas>=1.5.3
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
@@ -268,7 +268,7 @@ commands = isort --check-only --gitignore {env:PACKAGES_PATHS} scripts
 [testenv:check-hash]
 skipsdist = True
 usedevelop = True
-deps = open-autonomy[all]==0.13.1
+deps = open-autonomy[all]==0.13.2
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
@@ -630,7 +630,7 @@ chardet: >=3.0.4
 certifi: >=2019.11.28
 ;TODO: the following are conflicting packages that need to be sorted
 ; sub-dep of open-aea-ledger-ethereum-hwi
-hidapi: >=0.13.1
+hidapi: >=0.13.2
 ; shows in pip freeze but not referenced on code
 paramiko: >=3.1.0
 ; sub-dep of docker-compose
