--- a/tox.ini
+++ b/tox.ini
@@ -25,17 +25,17 @@ deps =
     joblib==1.1.0
     numpy>=1.21.6
     open-aea-ledger-cosmos==1.41.0.post1
-    open-aea-test-autonomy==0.13.3
-    open-autonomy[all]==0.13.3
+    open-aea-test-autonomy==0.13.4
+    open-autonomy[all]==0.13.4
     pandas>=1.5.3
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
     py-ecc==6.0.0
     scikit-learn>=1.0.2
-    statsmodels>=0.13.3
+    statsmodels>=0.13.2
     requests==2.28.2
     # for http server connection
-    openapi-core==0.13.3
+    openapi-core==0.13.2
     openapi-spec-validator==0.2.8
     eth-abi==4.0.0
     jsonschema>=4.16.0,<=4.19.0
@@ -269,7 +269,9 @@ commands = isort --check-only --gitignore {env:PACKAGES_PATHS} scripts
 [testenv:check-hash]
 skipsdist = True
 usedevelop = True
-deps = open-autonomy[all]==0.13.3
+deps = 
+    protobuf<4.25.0,>=4.21.6
+    open-autonomy[all]==0.13.4
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
@@ -631,7 +633,7 @@ chardet: >=3.0.4
 certifi: >=2019.11.28
 ;TODO: the following are conflicting packages that need to be sorted
 ; sub-dep of open-aea-ledger-ethereum-hwi
-hidapi: >=0.13.3
+hidapi: >=0.13.2
 ; shows in pip freeze but not referenced on code
 paramiko: >=3.1.0
 ; sub-dep of docker-compose
