--- a/Pipfile
+++ b/Pipfile
@@ -10,17 +10,17 @@ name = "pypi"
 [dev-packages]
 ### package deps
 aiohttp = "==3.7.4.post0"
-requests = "==2.28.2"
+requests = "==2.28.1"
 asn1crypto = "==1.4.0"
 grpcio = "==1.53.0"
 hypothesis = "==6.21.6"
 eth-abi = "==4.0.0"
-open-aea = {version = "==1.41.0.post1", extras = ["all"]}
-open-aea-ledger-ethereum = "==1.41.0.post1"
-open-aea-ledger-cosmos = "==1.41.0.post1"
-open-aea-cli-ipfs = "==1.41.0.post1"
-open-aea-test-autonomy = "==0.13.4"
-open-autonomy = {version = "==0.13.4", extras = [ "all"]}
+open-aea = {version = "==1.42.0", extras = ["all"]}
+open-aea-ledger-ethereum = "==1.42.0"
+open-aea-ledger-cosmos = "==1.42.0"
+open-aea-cli-ipfs = "==1.42.0"
+open-aea-test-autonomy = "==0.13.8"
+open-autonomy = {version = "==0.13.8", extras = ["all"]}
 pytz = "==2022.2.1"
 py-ecc = "==6.0.0"
 ### tests deps
@@ -29,7 +29,7 @@ tomte = {version = "==0.2.15", extras = ["cli", "tests"]}
 # for http server connection
 openapi-core = "==0.13.2"
 openapi-spec-validator = "==0.2.8"
-jsonschema = ">=4.16.0,<=4.19.0"
+jsonschema = "<4.4.0,>=4.3.0"
 
 [requires]
 python_version = "3.10"
