--- a/tox.ini
+++ b/tox.ini
@@ -24,21 +24,21 @@ deps =
     hypothesis==6.21.6
     joblib==1.1.0
     numpy>=1.21.6
-    open-aea-ledger-cosmos==1.41.0.post1
-    open-aea-test-autonomy==0.13.4
-    open-autonomy[all]==0.13.4
+    open-aea-ledger-cosmos==1.42.0
+    open-aea-test-autonomy==0.13.8
+    open-autonomy[all]==0.13.8
     pandas>=1.5.3
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
     py-ecc==6.0.0
     scikit-learn>=1.0.2
     statsmodels>=0.13.2
-    requests==2.28.2
+    requests==2.28.1
     # for http server connection
     openapi-core==0.13.2
     openapi-spec-validator==0.2.8
     eth-abi==4.0.0
-    jsonschema>=4.16.0,<=4.19.0
+    jsonschema<4.4.0,>=4.3.0
     protobuf<4.25.0,>=4.21.6
 
 [deps-base]
@@ -271,7 +271,7 @@ skipsdist = True
 usedevelop = True
 deps = 
     protobuf<4.25.0,>=4.21.6
-    open-autonomy[all]==0.13.4
+    open-autonomy[all]==0.13.8
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
