--- a/tox.ini
+++ b/tox.ini
@@ -513,6 +513,12 @@ ignore_missing_imports = True
 [mypy-web3.*]
 ignore_missing_imports = True
 
+[mypy-click.*]
+ignore_missing_imports = True
+
+[mypy-autonomy.*]
+ignore_missing_imports = True
+
 [darglint]
 docstring_style=sphinx
 strictness=short
