--- a/Pipfile
+++ b/Pipfile
@@ -27,8 +27,8 @@ py-ecc = "==6.0.0"
 mistune = "==2.0.3"
 tomte = {version = "==0.2.15", extras = ["cli", "tests"]}
 # for http server connection
-openapi-core = "==0.13.2"
-openapi-spec-validator = "==0.2.8"
+openapi-core = "==0.15.0"
+openapi-spec-validator = "<0.5.0,>=0.4.0"
 jsonschema = "<4.4.0,>=4.3.0"
 
 [requires]
