--- a/tox.ini
+++ b/tox.ini
@@ -35,8 +35,8 @@ deps =
     statsmodels>=0.13.2
     requests==2.28.1
     # for http server connection
-    openapi-core==0.13.2
-    openapi-spec-validator==0.2.8
+    openapi-core==0.15.0
+    openapi-spec-validator<0.5.0,>=0.4.0
     eth-abi==4.0.0
     jsonschema<4.4.0,>=4.3.0
     protobuf<4.25.0,>=4.21.6
