--- a/.github/workflows/test_release.yaml
+++ b/.github/workflows/test_release.yaml
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get autoremove
           sudo apt-get autoclean
           python -m pip install --upgrade pip
-          pip install propel-client==0.0.9 open-autonomy
+          pip install git+https://github.com/valory-xyz/propel-client.git@feature/service-deploy open-autonomy
 
       - name: Login to propel
         run: |
