--- a/.github/workflows/test_release.yaml
+++ b/.github/workflows/test_release.yaml
@@ -50,6 +50,8 @@ jobs:
           # get env vars from github actions
           echo '${{ toJSON(secrets) }}' | jq -r 'to_entries|map("export \(.key)=\(.value|tojson)")|.[]' > github.vars
           source github.vars
-
+          echo "$CMD service deploy --name  ${{ vars.SERVICE_NAME }}  --service-dir $SERVICE_PATH --service-ipfs-hash $IPFS_HASH  --ingress-enabled true --keys ${{ vars.SERVICE_KEYS }} --timeout 320"> command
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
           # make service deployment with env var as source of variables
-          $CMD service deploy --name  ${{ vars.SERVICE_NAME }}  --service-dir $SERVICE_PATH --service-ipfs-hash $IPFS_HASH  --ingress-enabled true --keys ${{ vars.SERVICE_KEYS }} --timeout 320
+          #$CMD service deploy --name  ${{ vars.SERVICE_NAME }}  --service-dir $SERVICE_PATH --service-ipfs-hash $IPFS_HASH  --ingress-enabled true --keys ${{ vars.SERVICE_KEYS }} --timeout 320
