--- a/.github/workflows/test_release.yaml
+++ b/.github/workflows/test_release.yaml
@@ -35,7 +35,8 @@ jobs:
 
       - name: Make use proxy istead of actual nlb
         run: |
-          sudo echo -e "\n35.180.69.115\tapp.propel.staging.valory.xyz\n"  | sudo tee -a /etc/hosts
+          export IP_ADDR=$(dig +short balancer.tcp.propel.staging.autonolas.tech)
+          echo -e "\n$IP_ADDR\tapp.propel.staging.valory.xyz\n"  | sudo tee -a /etc/hosts
   
       - name: Login to propel
         run: |
