--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,7 @@ name: Release Flow
 
 on:
   release:
-    types: [published]
+    types: [prereleased, released]
 
 jobs:
   publish-packages:
@@ -96,6 +96,7 @@ jobs:
 
   deploy-service-on-propel:
     name: Deploy service on propel
+    environment: ${{ github.event.action == 'released' && 'production' || 'staging' }}
     needs:
     - "publish-packages"
     - "publish-images"
@@ -145,5 +146,7 @@ jobs:
 
           # get env vars from github actions
           echo '${{ toJSON(secrets) }}' | jq -r 'to_entries|map("export \(.key)=\(.value|tojson)")|.[]' > github.vars
+          echo >> github.vars
+          echo '${{ toJSON(vars) }}' | jq -r 'to_entries|map("export \(.key)=\(.value|tojson)")|.[]' >> github.vars
           source github.vars
           $CMD service deploy --name  ${{ vars.SERVICE_NAME }}  --service-dir $SERVICE_PATH --service-ipfs-hash $IPFS_HASH  --ingress-enabled true --keys ${{ vars.SERVICE_KEYS }} --timeout 320
