--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -93,7 +93,7 @@ jobs:
           echo "Pushing $DOCKER_USER/oar-$AGENT:$DEFAULT_IMAGE_TAG"
           docker push $DOCKER_USER/oar-$AGENT:$VERSION
           docker push $DOCKER_USER/oar-$AGENT:$DEFAULT_IMAGE_TAG
-
+1
   deploy-service-on-propel:
     name: Deploy service on propel
     environment: ${{ github.event.action == 'released' && 'production' || 'staging' }}
@@ -132,7 +132,7 @@ jobs:
 
       - name: Login to propel
         run: |
-          $CMD login -u  ${{ vars.PROPEL_USERNAME }} -p  ${{ secrets.PROPEL_PASSWORD }}
+          $CMD login -u  '${{ vars.PROPEL_USERNAME }}' -p  '${{ secrets.PROPEL_PASSWORD }}'
 
       - name: Do a deployment
         run: |
@@ -149,4 +149,4 @@ jobs:
           echo >> github.vars
           echo '${{ toJSON(vars) }}' | jq -r 'to_entries|map("export \(.key)=\(.value|tojson)")|.[]' >> github.vars
           source github.vars
-          $CMD service deploy --name  ${{ vars.SERVICE_NAME }}  --service-dir $SERVICE_PATH --service-ipfs-hash $IPFS_HASH  --ingress-enabled true --keys ${{ vars.SERVICE_KEYS }} --timeout 320
+          $CMD service deploy --name  '${{ vars.SERVICE_NAME }}'  --service-dir $SERVICE_PATH --service-ipfs-hash $IPFS_HASH  --ingress-enabled true --keys '${{ vars.SERVICE_KEYS }}' --timeout 320
